Fixed some spacing We now have a working signup page Fixed up the edit settings form on the projects page Now redirect to project page if you go to the main page and are already logged in

--- a/public/stylesheets/project-meta.css
+++ b/public/stylesheets/project-meta.css
@@ -7,8 +7,24 @@
   margin-left: 10px;
 }
 
-#edit_settings input {
+#edit_settings label {
+  margin-left: 10px;
+  padding-top: 0px;
+}
+#edit_settings div.field-wrap {
+  width: 310px;
+  margin-left: 10px;
+  margin-right: 0px;
   margin-bottom: 10px;
+  border: none;
+}
+
+#edit_settings .text-form input {
+  margin: 0px;
+  width: 300px;
+}
+#edit_settings input.submit {
+  margin: 10px 0px;
 }
 
 .update_status {
